# gai

./: .actrc  Cargo.toml  LICENSE.md  README.md  flake.nix  index.html  matrix.jsonc  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/content/: privacy.md
docs/static/: demo.cast
docs/styles/: main.css
docs/templates/: footer.html  header.html  homepage.html
src/: args.rs  auth.rs  config.rs  main.rs  print.rs
src/ai/: gai.rs  gemini.rs  mod.rs  openai.rs  provider.rs  response.rs  schema.rs
src/cmd/: args.rs  auth.rs  commit.rs  find.rs  log.rs  mod.rs  state.rs  status.rs  tui.rs
src/cmds/: auth.rs  commit.rs  log.rs  mod.rs  tui.rs
src/configuration/: mod.rs
src/git/: README.md  checkout.rs  commit.rs  diffs.rs  errors.rs  lines.rs  log.rs  mod.rs  patches.rs  repo.rs  settings.rs  staging.rs  status.rs  tree.rs  utils.rs
src/print/: commits.rs  events.rs  find.rs  history.rs  loading.rs  log.rs  mod.rs  query.rs  status.rs  terminal.rs  tree.rs
src/providers/: extract.rs  gai.rs  gemini.rs  mod.rs  openai.rs  provider.rs  request.rs  schema.rs
src/requests/: builder.rs  commit.rs  find.rs  mod.rs
src/responses/: commit.rs  find.rs  mod.rs
src/schema/: builder.rs  commit.rs  find.rs  mod.rs
src/settings/: defaults.rs  load.rs  mod.rs
src/terminal/: app.rs  commits.rs  diffs.rs  utils.rs
src/tui/: app.rs  commit.rs  commits.rs  diffs.rs  events.rs  logs.rs  mod.rs  popup.rs  tabs.rs
src/utils/: consts.rs  graph.rs  mod.rs  print.rs
